added titles to about pages and added Educational Resources and Personal Projects to nav bar

--- a/layouts/css/styles.css
+++ b/layouts/css/styles.css
@@ -767,6 +767,10 @@ video {
   background-color: rgb(241 245 249 / 0.5);
 }
 
+.bg-slate-100\/90 {
+  background-color: rgb(241 245 249 / 0.9);
+}
+
 .bg-cover {
   background-size: cover;
 }
