added  ;  to @layer utilities in tailwindinput.css

--- a/tailwindinput.css
+++ b/tailwindinput.css
@@ -6,7 +6,7 @@
     .section-min-height {
     min-height: calc(100vh-68px)
     }
-}
+};
 
 .radial-blue {
     background: radial-gradient(lightyellow, skyblue);
